# kodo.ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_code_reviewer/: main.py  settings.py  worker.py
dataset/: codenet_exploratory.ipynb
